Start to populate datasets

--- a/www/src/documents/index.html
+++ b/www/src/documents/index.html
@@ -6,10 +6,10 @@ title: 'Home'
 <div class="row" class="text-center">
   <div class="col-lg-6">
     <h2>SemScenes</h2>
-    <p>A semantically-enriched 3D scene dataset.</p>
+    <p>This is an umbrella project/website for semantic understanding and synthesis of 3D scenes.</p>
     <p>
       Browse the scene database here
-      <a class="btn btn-primary" href="http://dovahkiin.stanford.edu/fuzzybox/scene-viewer.html">SceneViewer</a>
+      <a class="btn btn-primary" href="http://dovahkiin.stanford.edu/fuzzybox/scene-querier.html">SceneQuerier</a>
     </p>
     <p>
       Contribute by creating new scenes using our scene editor
